--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,12 @@
   </head>
   <body>
     <h1>Welcome to <%=shopData.shopName%></h1>
+    <h2>Menu</h2>
+    <p><a href="/">Home</a></p>
     <p><a href="about">About <%=shopData.shopName%></a></p>
     <p><a href="books/search">Search for books</a></p>
     <p><a href="users/register">Register with us</a></p>
+    <p><a href="/list">View all books</a></p>
+    <p><a href="/addbook">Add a new book</a></p>
   </body>
 </html>
