--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,5 +14,6 @@
     <p><a href="/list">View all books</a></p>
     <p><a href="/addbook">Add a new book</a></p>
     <p><a href="/bargainbooks">View bargain books</a></p>
+    <p><a href="/logout">Logout</a></p>
   </body>
 </html>
