Refactor book routes and update form actions for consistency

--- a/views/addbook.ejs
+++ b/views/addbook.ejs
@@ -9,7 +9,7 @@
 
     <h1>Add a new book</h1>
 
-    <form action="/bookadded" method="POST">
+    <form action="/books/add" method="POST">
         <p>
             <label for="name">Book name:</label>
             <input type="text" id="name" name="name" required>
@@ -23,7 +23,7 @@
         <button type="submit">Add book</button>
     </form>
 
-    <p><a href="/list">Back to book list</a></p>
+    <p><a href="/books/list">Back to book list</a></p>
 
 </body>
 </html>
