--- a/views/search-result.ejs
+++ b/views/search-result.ejs
@@ -21,7 +21,7 @@
         <p>No books found matching "<%= searchTerm %>".</p>
     <% } %>
 
-    <p><a href="/search">Back to search</a></p>
+    <p><a href="/books/search">Back to search</a></p>
     <p><a href="/">Back to home</a></p>
 
 </body>
