--- a/views/search.ejs
+++ b/views/search.ejs
@@ -9,7 +9,7 @@
 
     <h1>Search for a book</h1>
 
-    <form action="/search-result" method="GET">
+    <form action="/books/search-result" method="GET">
         <p>
             <label for="keyword">Book title:</label>
             <input type="text" id="keyword" name="keyword" required>
