--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,11 +9,14 @@
     <h2>Menu</h2>
     <p><a href="/">Home</a></p>
     <p><a href="about">About <%=shopData.shopName%></a></p>
-    <p><a href="/search">Search for books</a></p>
+    <p><a href="/books/search">Search for books</a></p>
     <p><a href="users/register">Register with us</a></p>
-    <p><a href="/list">View all books</a></p>
-    <p><a href="/addbook">Add a new book</a></p>
-    <p><a href="/bargainbooks">View bargain books</a></p>
-    <p><a href="/logout">Logout</a></p>
+    <p><a href="/books/list">View all books</a></p>
+    <p><a href="/books/add ">Add a new book</a></p>
+    <p><a href="/books/bargainbooks">View bargain books</a></p>
+    <p><a href="/users/login">Login</a></p>
+    <p><a href="/users/logout">Logout</a></p>
+    <p><a href="/users/list">List Users</a></p>
+    <p><a href="/users/audit">Audit Log</a></p>
   </body>
 </html>
