Add weather feature with routes and views for city weather lookup

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,5 +18,6 @@
     <p><a href="/users/logout">Logout</a></p>
     <p><a href="/users/list">List Users</a></p>
     <p><a href="/users/audit">Audit Log</a></p>
+    <p><a href="/weather">Weather</a></p>
   </body>
 </html>
